--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ sqlx = { version = "0.7", features = ["uuid", "chrono", "runtime-tokio", "postgr
 uuid = { version = "1.4", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
+tower-http = { version = "0.4.4", features = ["cors"] }
